<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Youth Episode</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Locating Network</string>
    <string name="downloading">Downloading</string>
    <string name="downloading0"></string>
    <string name="title_activity_home">Home</string>
    <string name="home_hello">Home Launched!</string>
    <string name="follow_us">Follow Us!</string>
    <string name="title_activity_follow">Follow Us!</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="linkedin">LinkedIn</string>
    <string name="pinterest">Pinterest</string>
    <string name="youtube">Youtube</string>
    <string name="tumblr">Tumblr</string>
    <string name="prev">Loading...</string>
    <string name="title_activity_article">Loading</string>

</resources>
